tests/macros/int/should_loop.stderr
error: option `should_loop` does not exist for kind `int`
 --> $DIR/should_loop.rs:3:9
  |
3 |         should_loop: todo!()
  |         ^^^^^^^^^^^
