tests/macros/int/should_loop.rs
fn main() {
    inquisition::questions![int {
        should_loop: todo!()
    }];
}
